# ChangeLog for dev-ruby/echoe
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/echoe/ChangeLog,v 1.45 2013/06/04 17:51:30 graaff Exp $

  04 Jun 2013; Hans de Graaff <graaff@gentoo.org> -echoe-4.3.1-r1.ebuild:
  Cleanup.

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> echoe-4.6.3.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  16 Dec 2012; Raúl Porcel <armin76@gentoo.org> echoe-4.6.3.ebuild:
  alpha/ia64/sparc/x86 stable wrt #421621

  23 Nov 2012; Anthony G. Basile <blueness@gentoo.org> echoe-4.6.3.ebuild:
  stable ppc ppc64, bug #421621

  10 Nov 2012; <ago@gentoo.org> echoe-4.6.3.ebuild:
  Stable for amd64, wrt bug #421621

  08 Nov 2012; Jeroen Roovers <jer@gentoo.org> echoe-4.6.3.ebuild:
  Stable for HPPA (bug #421621).

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> echoe-4.3.1-r1.ebuild,
  echoe-4.6.3.ebuild:
  Add ~alpha, alpha stable

  18 Jun 2012; Hans de Graaff <graaff@gentoo.org> -echoe-4.5.6.ebuild:
  Remove old version.

  18 Mar 2012; Hans de Graaff <graaff@gentoo.org> echoe-4.6.3.ebuild:
  Add missing dependency on the rdoc gem, bug 408465.

  19 Dec 2011; Hans de Graaff <graaff@gentoo.org> echoe-4.6.3.ebuild:
  Add dependency on newer rake as expressed by gemspec. This should fix bug
  395143.

*echoe-4.6.3 (17 Dec 2011)

  17 Dec 2011; Hans de Graaff <graaff@gentoo.org> +echoe-4.6.3.ebuild:
  Version bump.

  03 Oct 2011; Jeroen Roovers <jer@gentoo.org> echoe-4.3.1-r1.ebuild:
  Stable for HPPA (bug #385149).

  13 Jun 2011; Hans de Graaff <graaff@gentoo.org> echoe-4.3.1-r1.ebuild,
  echoe-4.5.6.ebuild:
  Update HOMEPAGE, fixing bug 371337.

  02 Jun 2011; Hans de Graaff <graaff@gentoo.org> -echoe-4.3.1.ebuild,
  -echoe-4.5.2.ebuild, -echoe-4.5.5.ebuild:
  Remove old versions.

  16 Apr 2011; Raúl Porcel <armin76@gentoo.org> echoe-4.3.1-r1.ebuild:
  ia64 stable wrt #357491

*echoe-4.5.6 (06 Apr 2011)
